<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ab_btn_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/s_myfriends"
            android:textColor="#FF8C00"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ab_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/s_story"
            android:textSize="18sp"
         
             >
        </TextView>

        <TextView
            android:id="@+id/ab_btn_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/s_mydiary"
            android:textColor="#FF8C00"
            android:textSize="18sp" />

    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/ab_list_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>