<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFDAB9"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/title_back"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/back"
            android:textColor="#ffffffff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/comit"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="12dp"
            android:background="@drawable/title_comit"
            android:gravity="center"
            android:text="@string/abca_upload"
            android:textColor="#ffffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/abca_addarticle"
            android:textColor="#DC143C"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <EditText
            android:id="@+id/abca_headline"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/table_qiandao_text"
            android:hint="@string/abca_headline"
            android:inputType="textMultiLine"
            android:gravity="center"
          
            android:padding="20dp" >
        </EditText>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/abca_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/table_qiandao_text"
            android:gravity="top"
			android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:hint="@string/abca_content"
            android:padding="20dp"
            android:paddingBottom="-50dp"
            android:singleLine="true"
            android:textSize="16sp" >
        </EditText>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:background="@drawable/camera_icon" >
            </ImageButton>

            <LinearLayout
                android:id="@+id/ll_imgs"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/camera"
                android:gravity="center_vertical"
                android:orientation="horizontal" >
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line_fenge_pink" >
        </ImageView>
    </FrameLayout>

</LinearLayout>