<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    
    
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/ad_txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="10.5dp"
            android:text="@string/f_register"
            android:textColor="@color/my_title_textcolor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ad_txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="10.5dp"
            android:text="@string/f_login"
            android:textColor="@color/my_title_textcolor"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/f_mine"
            android:textSize="18sp" />
    </RelativeLayout>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    <ScrollView
        android:id="@+id/MyMyScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ad_img_header"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/bad_face_lib" />

                <TextView
                    android:id="@+id/ad_txt_myname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/ad_img_header"
                    android:drawableRight="@drawable/arrow_profile"
                    android:gravity="bottom"
                    android:text="@string/ad_please_login"
                    android:textColor="#666666"
                    android:textSize="18sp" />

                 <TextView
                     android:id="@+id/ad_txt_introduce"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/ad_txt_myname"
                     android:layout_toRightOf="@+id/ad_img_header"
                     android:text="@string/ad_please_login"
                     android:textColor="#666666"
                      />
                
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/account_tab_bg"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/ad_txt_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_tab_background"
                    android:gravity="center"
                    android:padding="14dp"
                    android:text="@string/ad_sign_in"
                    android:textColor="#666666"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ad_txt_set"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_tab_background"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/ad_set"
                    android:textColor="#666666"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ad_txt_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_tab_background"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/ad_log_out"
                    android:textColor="#666666"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F4F4"
                android:padding="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4F4F4"
                android:padding="2dp" />
              
            <LinearLayout
                android:id="@+id/ad_linupdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:background="@drawable/my_tab_background"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@drawable/my_list_txt_background"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/ad_version_updating"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/my_list_txt_background"
                    android:paddingRight="10dp"
                    android:src="@drawable/arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ad_linfeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_tab_background"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@drawable/my_list_txt_background"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/ad_feedback"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/my_list_txt_background"
                    android:paddingRight="10dp"
                    android:src="@drawable/arrow" />
                
                
            </LinearLayout>
            
               <LinearLayout
                android:id="@+id/ad_linabout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_tab_background"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@drawable/my_list_txt_background"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/ad_about"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/my_list_txt_background"
                    android:paddingRight="10dp"
                    android:src="@drawable/arrow" />
                
                
            </LinearLayout>
            
            
            
            
            
            
            
            
            
		</LinearLayout>
            
    </ScrollView>

</LinearLayout>